# ws-for-ov2slam

./: commands jaureguiberry  cyclonedds.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/controller_launcher/share/controller_launcher/: package.bash  package.dsv  package.ps1  package.sh
install/kobuki_node/lib/kobuki_node/: kobuki_ros_node
install/kobuki_node/share/kobuki_node/: package.sh
install/ov2slam/share/ov2slam/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: package.sh
install/realsense2_description/share/realsense2_description/: local_setup.sh  package.sh
install/teleop_twist_joy/lib/teleop_twist_joy/: teleop_node
install/teleop_twist_joy/share/teleop_twist_joy/: local_setup.sh  package.sh
install/teleop_twist_joy/share/teleop_twist_joy/config/: joy_config.yaml
log/: latest_build
src/controller_launcher/: package.xml  setup.cfg  setup.py
src/controller_launcher/launch/: controller_launch.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/controller_launcher/share/controller_launcher/: package.sh  package.zsh
src/install/kobuki_node/lib/kobuki_node/: kobuki_ros_node
src/install/kobuki_node/share/kobuki_node/: package.sh
src/install/librealsense2/lib/: librealsense2-gl.so.2.55.1
src/install/librealsense2/lib/pkgconfig/: realsense2-gl.pc  realsense2.pc
src/log/: latest_build
src/ov2slam-ros2/: ov2slam_visualization.rviz
(+10 files in other folders)
