<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller_launcher</name>
  <version>0.0.1</version>
  <description>Package to launch kobuki_node, joy_node, teleop_twist_joy and echo /cmd_vel</description>
  <maintainer email="abdulahm@fel.cvut.cz">imr</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>kobuki_node</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

